[metadata]
name = redis-in-action
summary = redis-in-action
author = spade
author-email = spade@hotmail.com
classifier =
    DProgramming Language :: Python

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    src
scripts =

[entry_points]

#[build_sphinx]
#all_files = 1
#build-dir = doc/build
#source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[nosetests]
with-doctest=1
doctest-extension=.txt
exe = 1
verbosity=2
detailed-errors = 1
#coverage
with-coverage=1
cover-package=src.main
cover-html = true
cover-erase = true
